--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- displays site properly based on user's device -->
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
 
     <title>Frontend Mentor | Article preview component</title>
     <link rel="stylesheet" href="style.css">
@@ -26,7 +26,7 @@
 <body>
     <div class="main-container">
         <div class="image-container">
-            <img src="../images/drawers.jpg" class="drawer-img" alt="drawers">
+            <img src="images/drawers.jpg" class="drawer-img" alt="drawers">
         </div>
         <div class="content-container">
             <div class="text-container">
@@ -41,22 +41,22 @@
             </div>
             <div class="third-container">
                 <div class="avatar">
-                    <img src="../images/avatar-michelle.jpg" alt="avatar-michelle" class="avatar-img">
+                    <img src="images/avatar-michelle.jpg" alt="avatar-michelle" class="avatar-img">
                 </div>
                 <p class="name">Michelle-Appleton</p>
                 <p class="date">28-Jun-2020</p>
 
                 <div class="share-image-container">
-                    <img src="../images/icon-share.svg" class="share-img" alt="icon-share">
+                    <img src="images/icon-share.svg" class="share-img" alt="icon-share">
                 </div>
 
                 <!-- after hover -->
                 <div class="share-context-container">
                     <div class="text-area">
                         <p class="inner-share">S H A R E</p>
-                        <img class="inner-icon facebook" src="../images/icon-facebook.svg" alt="icon-facebook">
-                        <img class="inner-icon twitter" src="../images/icon-twitter.svg" alt="icon-twitter">
-                        <img class="inner-icon pinterest" src="../images/icon-pinterest.svg" alt="icon-pinterest">
+                        <img class="inner-icon facebook" src="images/icon-facebook.svg" alt="icon-facebook">
+                        <img class="inner-icon twitter" src="images/icon-twitter.svg" alt="icon-twitter">
+                        <img class="inner-icon pinterest" src="images/icon-pinterest.svg" alt="icon-pinterest">
                     </div>
 
                     <div class="triangle-container"></div>
